[package]
name = "dispatch-test"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.5"
gnuplot = "0.0.32"
atomic_blobject = "0.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
b_error = "0.1.0"
